src/test/resources/typeSystemTestModels/valid/expressions/ShiftOp.java
package typeSystemTestModels.valid.expressions;

public class ShiftOp {

  public void TestShiftOp(){
    int n = 1 >> 2;
    double d = n << 3;
  }

}
